widget/gtk/nsAppShell.cpp:300: error: use of undeclared identifier 'WakeLockListener'
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox120 | --- | fixed |
People
(Reporter: sergeev917, Assigned: sergeev917)
Details
Attachments
(2 files)
416 bytes,
patch
|
Details | Diff | Splinter Review | |
48 bytes,
text/x-phabricator-request
|
Details | Review |
Steps to reproduce:
Attempt to compile firefox-118 from sources with DBUS support being disabled.
Actual results:
Compile error: widget/gtk/nsAppShell.cpp:300:11: error: use of undeclared identifier 'WakeLockListener'.
The problem is caused by WakeLockListener being unconditionally used [1] while the corresponding header inclusion is covered by MOZ_ENABLE_DBUS check [2].
[1] https://hg.mozilla.org/mozilla-central/file/tip/widget/gtk/nsAppShell.cpp#l300
[2] https://hg.mozilla.org/mozilla-central/file/tip/widget/gtk/nsAppShell.cpp#l27
Expected results:
The build should have succeed.
Assignee | ||
Comment 1•2 years ago
|
||
One way to fix the compile error
Comment 2•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 3•2 years ago
|
||
Thanks for the patch Alexander. Do you mind to submit the patch to Phabricator so it can be reviewed and checked in?
https://moz-conduit.readthedocs.io/en/latest/phabricator-user.html
Use me as reviewer (r?stransky)
Thanks.
Updated•2 years ago
|
Assignee | ||
Comment 4•2 years ago
|
||
(In reply to Martin Stránský [:stransky] (ni? me) from comment #3)
Do you mind to submit the patch to Phabricator so it can be reviewed and checked in?
Tracked at: https://phabricator.services.mozilla.com/D191034
Assignee | ||
Comment 5•2 years ago
|
||
Clean up usage of WakeLockListener when building without dbus support
enabled.
Updated•2 years ago
|
Updated•2 years ago
|
Comment 7•2 years ago
|
||
bugherder |
Description
•