Bug 1855731 - Include WakeLockListener regardless of dbus support r=stransky

Fix a compile error caused by WakeLockListener being used without the
corresponding header due to the header being included only when dbus is
enabled. Since WakeLockListener works without dbus as well, the fix is
to make the inclusion unconditional.

Differential Revision: https://phabricator.services.mozilla.com/D191034